[add] document warning removal work-around #46